--- a/modules/hyprland/hyprland.conf
+++ b/modules/hyprland/hyprland.conf
@@ -79,10 +79,10 @@ misc {
 	disable_autoreload = true
 }
 
-# xwayland {
-#   use_nearest_neighbor = true
-#   force_zero_scaling = true
-# }
+xwayland {
+  use_nearest_neighbor = true
+  force_zero_scaling = true
+}
 
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
