--- a/modules/hyprland/hyprland.conf
+++ b/modules/hyprland/hyprland.conf
@@ -1,3 +1,5 @@
+exec-once=dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY HYPRLAND_INSTANCE_SIGNATURE XDG_CURRENT_DESKTOP && systemctl --user restart hyprland-session.target
+
 monitor=,preferred,auto,auto
 monitor=eDP-1,2160x1440@60,0x0,2
 
@@ -95,9 +97,8 @@ xwayland {
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, alacritty
 bind = $mainMod, Return, exec, alacritty
-bind = $mainMod, C, killactive, 
+bind = $mainMod, Q, killactive, 
 bind = $mainMod, M, exit, 
 bind = $mainMod, E, exec, dolphin
 bind = $mainMod, V, togglefloating, 
