--- a/modules/hyprland/hyprland.conf
+++ b/modules/hyprland/hyprland.conf
@@ -98,6 +98,7 @@ $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Return, exec, alacritty
+bind = $mainMod, A, exec, footclient
 bind = $mainMod, Q, killactive, 
 bind = $mainMod, M, exit, 
 bind = $mainMod, E, exec, dolphin
