--- a/modules/hyprland/hyprland.conf
+++ b/modules/hyprland/hyprland.conf
@@ -1,4 +1,4 @@
-exec-once=dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY HYPRLAND_INSTANCE_SIGNATURE XDG_CURRENT_DESKTOP && systemctl --user restart hyprland-session.target
+exec-once=dbus-update-activation-environment --systemd --all && systemctl --user restart hyprland-session.target
 
 monitor=,preferred,auto,auto
 monitor=eDP-1,2160x1440@60,0x0,2
